Item15619: fix icon alignments in menus

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/ui/themes/foswiki/jquery-ui.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/ui/themes/foswiki/jquery-ui.uncompressed.css
@@ -1046,6 +1046,7 @@ a.ui-state-highlight.ui-state-hover,
   background: transparent;
   font-family:FontAwesome;
   font-weight:normal;
+  line-height:1;
 }
 
 .ui-widget-icon-block {
@@ -1589,7 +1590,6 @@ a.ui-state-highlight.ui-state-hover,
 .ui-menu .ui-menu {
   margin-top: -3px;
   position: absolute;
-  width:100%;
 }
 .ui-menu .ui-menu-item {
   margin:0;
